Primera migracion + Infraestructure

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+#DB String
+appsettings.Development.json
+
 # User-specific files
 *.rsuser
 *.suo
