--- a/src/NominaSoft.Infraestructure/NominaSoft.Infraestructure.csproj
+++ b/src/NominaSoft.Infraestructure/NominaSoft.Infraestructure.csproj
@@ -4,4 +4,17 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="EFCore\Migrations\20191006233327_Inicial.cs" />
+    <Compile Remove="EFCore\Migrations\20191006233327_Inicial.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NominaSoft.Core\NominaSoft.Core.csproj" />
+  </ItemGroup>
+
 </Project>
