--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -8,18 +8,19 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        dotnet: [2.2.108, 3.0.100]
         os: [ubuntu-latest, windows-latest, macOS-latest]
     
     steps:
       - uses: actions/checkout@v1
-      - name: Configurando .NET Core
+      - name: Configurando .NET Core ${{ matrix.dotnet }}
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 2.2.108
+          dotnet-version: ${{ matrix.dotnet }}
           
       - name: Building
         run: dotnet build ./src
       - name: Corriendo pruebas unitarias
         run: |
-          dotnet add package dotnet-xunit
+          dotnet add package dotnet-xunit ./src/NominaSoft.Tests/NominaSoft.Tests.csproj
           dotnet test ./src/NominaSoft.Tests/NominaSoft.Tests.csproj
