Hotfix de configuración

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -20,7 +20,7 @@ jobs:
           
       - name: Corriendo pruebas unitarias
         run: |
-          dotnet add package ./src/NominaSoft.Tests/NominaSoft.Tests.csproj dotnet-xunit
+          dotnet add ./src/NominaSoft.Tests/NominaSoft.Tests.csproj package dotnet-xunit
           dotnet test ./src/NominaSoft.Tests/NominaSoft.Tests.csproj
 
   build:
