Cambios poco importantes a la configuración del CI

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -4,35 +4,40 @@ on: [push]
 
 jobs:
   unit-tests:
-    name: UT ${{ matrix.os}}
+    name: UT ${{ matrix.os}} ${{ matrix.dotnet }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         dotnet: [2.2.108, 3.0.100]
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        os: [ubuntu-latest, windows-latest]
 
     steps:
+      - name: Configurando el repositorio en la máquina virtual
       - uses: actions/checkout@v1
+
       - name: Configurando .NET Core ${{ matrix.dotnet }}
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: ${{ matrix.dotnet }}
-      - run: dotnet add ./src/NominaSoft.Tests/NominaSoft.Tests.csproj package dotnet-xunit
+
+      - name: Añadiendo xUnit
+        run: dotnet add ./src/NominaSoft.Tests/NominaSoft.Tests.csproj package dotnet-xunit
           
       - name: Corriendo pruebas unitarias
         run: dotnet test ./src/NominaSoft.Tests/NominaSoft.Tests.csproj
 
   build:
-    name: Build ${{ matrix.os }}
+    name: Build ${{ matrix.os }} ${{ matrix.dotnet }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         dotnet: [2.2.108, 3.0.100]
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        os: [ubuntu-latest, windows-latest]
     needs: unit-tests
     
     steps:
       - uses: actions/checkout@v1
+
       - name: Configurando .NET Core ${{ matrix.dotnet }}
         uses: actions/setup-dotnet@v1
         with:
