--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -1,28 +1,48 @@
 name: NominaSoft-CI
 
-on:
-  push:
-    branches: 
-      - dev
+on: [push]
 
 jobs:
-  build:
-    name: Despliegue en ${{ matrix.os }}
+  unit-tests:
+    name: UT ${{ matrix.os}} ${{ matrix.dotnet }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-    
+        dotnet: [2.2.108, 3.0.100]
+        os: [ubuntu-latest, windows-latest]
+
     steps:
-      - uses: actions/checkout@v1
-      - name: Configurando .NET Core
+      - name: Configurando el repositorio en la máquina virtual
+        uses: actions/checkout@v1
+
+      - name: Configurando .NET Core ${{ matrix.dotnet }}
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 2.2.108
+          dotnet-version: ${{ matrix.dotnet }}
+
+      - name: Añadiendo xUnit
+        run: dotnet add ./src/NominaSoft.Tests/NominaSoft.Tests.csproj package dotnet-xunit
           
+      - name: Corriendo pruebas unitarias
+        run: dotnet test ./src/NominaSoft.Tests/NominaSoft.Tests.csproj
+
+  build:
+    name: Build ${{ matrix.os }} ${{ matrix.dotnet }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        dotnet: [2.2.108, 3.0.100]
+        os: [ubuntu-latest, windows-latest]
+    needs: unit-tests
+    
+    steps:
+      - name: Configurando el repositorio en la máquina virtual
+        uses: actions/checkout@v1
+
+      - name: Configurando .NET Core ${{ matrix.dotnet }}
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: ${{ matrix.dotnet }}
+
       - name: Building
         run: dotnet build ./src
-      - name: Corriendo pruebas unitarias
-        run: |
-          dotnet add package dotnet-xunit
-          dotnet test ./src/NominaSoft.Tests/NominaSoft.Tests.csproj
