--- a/src/NominaSoft.Infraestructure/NominaSoft.Infraestructure.csproj
+++ b/src/NominaSoft.Infraestructure/NominaSoft.Infraestructure.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
